--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -16,8 +16,14 @@
   }
 }
 
+a{
+  text-decoration: none;
+  color: inherit;
+}
 body {
   color: rgb(var(--foreground-rgb));
+  max-width: 100vw;
+  overflow-x: hidden;
   background: linear-gradient(
       to bottom,
       transparent,
@@ -30,4 +36,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
